# patient-readmission-mlops

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  download_data.py  main.py  pyproject.toml
