[project]
name = "patient-readmission-mlops"
version = "0.1.0"
description = "MLOps pipeline for patient readmission prediction"
requires-python = ">=3.11"
authors = [
  {name = "Pritesh Shah", email = "priteshshahwork@gmail.com"}
]

dependencies = [
    "polars>=0.20.26",
    "pandas>=2.2.2",
    "scikit-learn>=1.5.0", 
    "xgboost>=2.1.0",
    "mlflow>=2.13.0",
    "fastapi>=0.111.0",
    "pydantic>=2.7.0",
    "azure-storage-blob>=12.19.0",
    "azure-identity>=1.15.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.2.0",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "types-requests>=2.32.0.20250602",
]
